Add splash screen with logo

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -7,8 +7,9 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
+      "image": "./assets/logo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#6366f1"
+      "backgroundColor": "#128c7e"
     },
     "assetBundlePatterns": [
       "**/*"
