Add proper font loading with useFonts hook for production

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -59,6 +59,9 @@
           "savePhotosPermission": "Allow EchoUs to save photos.",
           "isAccessMediaLocationEnabled": true
         }
+      ],
+      [
+        "expo-font"
       ]
     ],
     "extra": {
